Transferred the commands-related stuff from RefactoringFolder to a Commands-exclusive library project.

--- a/PswManagerTests/PswManagerTests.csproj
+++ b/PswManagerTests/PswManagerTests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PswManagerCommands\PswManagerCommands.csproj" />
     <ProjectReference Include="..\PswManagerLibrary\PswManagerLibrary.csproj" />
   </ItemGroup>
 
