--- a/PswManagerDatabase/PswManagerDatabase.csproj
+++ b/PswManagerDatabase/PswManagerDatabase.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\PswManagerHelperMethods\PswManagerHelperMethods.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DataAccess\TextFileConnHelper\" />
+  </ItemGroup>
+
 </Project>
