--- a/PswManagerLibrary/PswManagerLibrary.csproj
+++ b/PswManagerLibrary/PswManagerLibrary.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PswManagerCommands\PswManagerCommands.csproj" />
+    <ProjectReference Include="..\PswManagerDatabase\PswManagerDatabase.csproj" />
     <ProjectReference Include="..\PswManagerHelperMethods\PswManagerHelperMethods.csproj" />
   </ItemGroup>
 
