--- a/PswManagerCommands/PswManagerCommands.csproj
+++ b/PswManagerCommands/PswManagerCommands.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\PswManagerHelperMethods\PswManagerHelperMethods.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Unused\Validation\" />
+  </ItemGroup>
+
 </Project>
