--- a/PswManagerLibrary/PswManagerLibrary.csproj
+++ b/PswManagerLibrary/PswManagerLibrary.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\PswManagerCommands\PswManagerCommands.csproj" />
     <ProjectReference Include="..\PswManagerDatabase\PswManagerDatabase.csproj" />
+    <ProjectReference Include="..\PswManagerEncryption\PswManagerEncryption.csproj" />
     <ProjectReference Include="..\PswManagerHelperMethods\PswManagerHelperMethods.csproj" />
   </ItemGroup>
 
