--- a/PswManagerAsync/PswManagerAsync.csproj
+++ b/PswManagerAsync/PswManagerAsync.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PswManagerHelperMethods\PswManagerHelperMethods.csproj" />
+  </ItemGroup>
+
 </Project>
