--- a/PswManagerDatabase/PswManagerDatabase.csproj
+++ b/PswManagerDatabase/PswManagerDatabase.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PswManagerAsync\PswManagerAsync.csproj" />
+    <ProjectReference Include="..\PswManagerAsync\PswManager.Async.csproj" />
     <ProjectReference Include="..\PswManagerHelperMethods\PswManagerHelperMethods.csproj" />
   </ItemGroup>
 
