--- a/PswManagerTests/PswManagerTests.csproj
+++ b/PswManagerTests/PswManagerTests.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PswManager.Async\PswManager.Async.csproj" />
     <ProjectReference Include="..\PswManagerCommands\PswManagerCommands.csproj" />
     <ProjectReference Include="..\PswManagerDatabase\PswManagerDatabase.csproj" />
     <ProjectReference Include="..\PswManagerEncryption\PswManagerEncryption.csproj" />
