--- a/PswManagerEncryption/PswManagerEncryption.csproj
+++ b/PswManagerEncryption/PswManagerEncryption.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PswManagerAsync\PswManager.Async.csproj" />
+    <ProjectReference Include="..\PswManager.Async\PswManager.Async.csproj" />
   </ItemGroup>
 
 </Project>
