--- a/PswManagerLibrary/PswManagerLibrary.csproj
+++ b/PswManagerLibrary/PswManagerLibrary.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PswManagerCommands\PswManagerCommands.csproj" />
+    <ProjectReference Include="..\PswManagerCommands\PswManager.Commands.csproj" />
     <ProjectReference Include="..\PswManagerDatabase\PswManagerDatabase.csproj" />
     <ProjectReference Include="..\PswManagerEncryption\PswManagerEncryption.csproj" />
     <ProjectReference Include="..\PswManagerHelperMethods\PswManagerHelperMethods.csproj" />
