--- a/PswManagerLibrary/PswManagerLibrary.csproj
+++ b/PswManagerLibrary/PswManagerLibrary.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PswManager.Commands\PswManager.Commands.csproj" />
-    <ProjectReference Include="..\PswManagerDatabase\PswManagerDatabase.csproj" />
+    <ProjectReference Include="..\PswManager.Database\PswManager.Database.csproj" />
     <ProjectReference Include="..\PswManagerEncryption\PswManagerEncryption.csproj" />
     <ProjectReference Include="..\PswManagerHelperMethods\PswManagerHelperMethods.csproj" />
   </ItemGroup>
