--- a/PswManager.Async/PswManager.Async.csproj
+++ b/PswManager.Async/PswManager.Async.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PswManagerHelperMethods\PswManagerHelperMethods.csproj" />
+    <ProjectReference Include="..\PswManager.Utils\PswManager.Utils.csproj" />
   </ItemGroup>
 
 </Project>
