--- a/PswManagerLibrary/PswManagerLibrary.csproj
+++ b/PswManagerLibrary/PswManagerLibrary.csproj
@@ -8,7 +8,7 @@
     <ProjectReference Include="..\PswManager.Commands\PswManager.Commands.csproj" />
     <ProjectReference Include="..\PswManager.Database\PswManager.Database.csproj" />
     <ProjectReference Include="..\PswManager.Encryption\PswManager.Encryption.csproj" />
-    <ProjectReference Include="..\PswManagerHelperMethods\PswManagerHelperMethods.csproj" />
+    <ProjectReference Include="..\PswManager.Utils\PswManager.Utils.csproj" />
   </ItemGroup>
 
 </Project>
