Renamed PswManagerLibrary (csproj, namespace, folder) to PswManager.Core

--- a/PswManager.ConsoleUI/PswManager.ConsoleUI.csproj
+++ b/PswManager.ConsoleUI/PswManager.ConsoleUI.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PswManagerLibrary\PswManagerLibrary.csproj" />
+    <ProjectReference Include="..\PswManager.Core\PswManager.Core.csproj" />
   </ItemGroup>
 
 </Project>
