--- a/PswManagerTests/PswManagerTests.csproj
+++ b/PswManagerTests/PswManagerTests.csproj
@@ -19,7 +19,7 @@
     <ProjectReference Include="..\PswManager.Commands\PswManager.Commands.csproj" />
     <ProjectReference Include="..\PswManager.Database\PswManager.Database.csproj" />
     <ProjectReference Include="..\PswManager.Encryption\PswManager.Encryption.csproj" />
-    <ProjectReference Include="..\PswManagerLibrary\PswManagerLibrary.csproj" />
+    <ProjectReference Include="..\PswManager.Core\PswManager.Core.csproj" />
   </ItemGroup>
 
 </Project>
