--- a/PswManager.Core.Tests/PswManager.Core.Tests.csproj
+++ b/PswManager.Core.Tests/PswManager.Core.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+    <PackageReference Include="Moq" Version="4.18.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <PrivateAssets>all</PrivateAssets>
@@ -16,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Inner\" />
+    <ProjectReference Include="..\PswManager.Core\PswManager.Core.csproj" />
   </ItemGroup>
 
 </Project>
