Extracted all commands-related logic from PswManager.Core to PswManager.ConsoleUI.
The reason for this change is that non-console UIs won't need to use the commands, as they will call the CRUD methods directly.

--- a/PswManager.TestUtils/PswManager.TestUtils.csproj
+++ b/PswManager.TestUtils/PswManager.TestUtils.csproj
@@ -1,13 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PswManager.Database\PswManager.Database.csproj" />
-    <ProjectReference Include="..\PswManager.Encryption\PswManager.Encryption.csproj" />
-    <ProjectReference Include="..\PswManager.Utils\PswManager.Utils.csproj" />
   </ItemGroup>
 
 </Project>
