--- a/PswManager.ConsoleUI/PswManager.ConsoleUI.csproj
+++ b/PswManager.ConsoleUI/PswManager.ConsoleUI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PswManager.Commands\PswManager.Commands.csproj" />
     <ProjectReference Include="..\PswManager.Core\PswManager.Core.csproj" />
   </ItemGroup>
 
