Extracted objects in PswManager.Utils.WrappingObjects to main PswManager.Utils.
Additionally, moved the tests regarding RefCount<T> to a new test project specific to PswManager.Utils.

--- a/PswManager.Utils.Tests/PswManager.Utils.Tests.csproj
+++ b/PswManager.Utils.Tests/PswManager.Utils.Tests.csproj
@@ -16,4 +16,9 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\PswManager.Utils\PswManager.Utils.csproj" />
+        <ProjectReference Include="..\PswManager.TestUtils\PswManager.TestUtils.csproj" />
+    </ItemGroup>
+
 </Project>
