Implemented usage of new Option<TValue> as return for the creation of accounts (Option<CreatorErrorCode>).
If it returns an error code, the operation has failed. Otherwise, it has succeeded.

--- a/PswManager.ConsoleUI/PswManager.ConsoleUI.csproj
+++ b/PswManager.ConsoleUI/PswManager.ConsoleUI.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\PswManager.Commands\PswManager.Commands.csproj" />
     <ProjectReference Include="..\PswManager.Core\PswManager.Core.csproj" />
+    <Using Include="PswManager.Utils"/>
   </ItemGroup>
 
 </Project>
