Implemented usage of Option<DeleterErrorCode> for the DeleteAccount pipeline.

--- a/PswManager.Core.Tests/PswManager.Core.Tests.csproj
+++ b/PswManager.Core.Tests/PswManager.Core.Tests.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PswManager.Core\PswManager.Core.csproj" />
+    <ProjectReference Include="..\PswManager.TestUtils\PswManager.TestUtils.csproj" />
   </ItemGroup>
 
 </Project>
