--- a/PswManager.Database.Tests/PswManager.Database.Tests.csproj
+++ b/PswManager.Database.Tests/PswManager.Database.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -14,7 +14,8 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <ProjectReference Include="..\PswManager.TestUtils\PswManager.TestUtils.csproj" />
+        <ProjectReference Include="..\PswManager.TestUtils\PswManager.TestUtils.csproj"/>
+        <Using Include="PswManager.TestUtils"/>
     </ItemGroup>
 
 </Project>
