Rewrote TokenService and moved it(and CryptoAccountService) to PswManager.Core.Services

--- a/PswManager.Core/PswManager.Core.csproj
+++ b/PswManager.Core/PswManager.Core.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IO.Abstractions" Version="17.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PswManager.Database\PswManager.Database.csproj" />
     <ProjectReference Include="..\PswManager.Encryption\PswManager.Encryption.csproj" />
     <ProjectReference Include="..\PswManager.Utils\PswManager.Utils.csproj" />
