--- a/PswManager.Core.Tests/PswManager.Core.Tests.csproj
+++ b/PswManager.Core.Tests/PswManager.Core.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -15,6 +15,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+      <Using Include="Xunit" />
+      <Using Include="Moq" />
   </ItemGroup>
 
   <ItemGroup>
