--- a/PswManager.ConsoleUI.Tests/PswManager.ConsoleUI.Tests.csproj
+++ b/PswManager.ConsoleUI.Tests/PswManager.ConsoleUI.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -18,7 +18,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PswManager.ConsoleUI\PswManager.ConsoleUI.csproj" />
+    <ProjectReference Include="..\PswManager.Core.Tests\PswManager.Core.Tests.csproj" />
     <ProjectReference Include="..\PswManager.TestUtils\PswManager.TestUtils.csproj" />
+      <Using Include="Xunit"/>
   </ItemGroup>
 
 </Project>
