--- a/PswManager.UI.WPF/PswManager.UI.WPF.csproj
+++ b/PswManager.UI.WPF/PswManager.UI.WPF.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PswManager.Core\PswManager.Core.csproj" />
+  </ItemGroup>
+
 </Project>
